--- a/DBfiles/mydb.properties
+++ b/DBfiles/mydb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.6.0
-#Mon Aug 09 12:50:37 SAMT 2021
-tx_timestamp=353
-modified=yes
+#Mon Aug 09 13:14:22 SAMT 2021
+tx_timestamp=397
+modified=no
 version=2.6.0
